tests/lean/490.lean.expected.out
490.lean:2:0-2:19: error: invalid namespace '_root_', '_root_' is a reserved namespace
