tests/lean/490.lean
namespace Foo
def _root_.bar := 1 -- Error
end Foo
